# PaddleX

./: README.md  README_en.md  mkdocs.yml  requirements.txt  setup.py
.precommit/: check_custom.py
docs/: CHANGLOG.en.md  CHANGLOG.md  FAQ.en.md  FAQ.md  index.en.md  index.md  quick_start.en.md  quick_start.md
libs/paddlex-hpi/: MANIFEST.in  pyproject.toml  requirements.txt  test_requirements.txt
libs/paddlex-hpi/scripts/: build_wheel.sh
libs/paddlex-hpi/src/paddlex_hpi/: __init__.py  _config.py  _model_info.py  _strategy.py  model_info_collection.json
libs/paddlex-hpi/src/paddlex_hpi/_utils/: compat.py  misc.py  typing.py
libs/paddlex-hpi/src/paddlex_hpi/models/: __init__.py  anomaly_detection.py  base.py  face_recognition.py  formula_recognition.py  general_recognition.py  image_classification.py  image_unwarping.py  instance_segmentation.py  multilabel_classification.py  object_detection.py  semantic_segmentation.py  table_recognition.py  text_detection.py  text_recognition.py  ts_ad.py  ts_cls.py  ts_fc.py
libs/paddlex-hpi/tests/models/: base.py  test_anomaly_detection.py  test_face_recognition.py  test_formula_recognition.py  test_general_recognition.py  test_image_classification.py  test_image_unwarping.py  test_instance_segmentation.py  test_multilabel_classification.py  test_object_detection.py  test_semantic_segmentation.py  test_table_recognition.py  test_text_detection.py  test_text_recognition.py  test_ts_ad.py  test_ts_cls.py  test_ts_fc.py
libs/paddlex-hpi/tests/testing_utils/: cv.py  download.py  misc.py
paddlex/: __init__.py  __main__.py  (+5 more)
(+2791 files in other folders)
