[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlex-hpi"
version = "3.0.0.rc0"
description = ""
readme = "README.md"
authors = []
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["test_requirements.txt"]}
